--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name</title>
+  <title>saiaj.in</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -140,29 +140,28 @@
 <body>
 
   <nav>
-    <strong>Your Name</strong>
+    <strong>saiaj.in</strong>
     <div>
-      <a href="#">About</a>
-      <a href="#">Work</a>
-      <a href="#">Contact</a>
+      <a href="#">hey</a>
+      <a href="#">placeholder</a>
+      <a href="#">hahaha imiss you</a>
     </div>
   </nav>
 
   <main>
     <div class="badge">
       <div class="dot"></div>
-      Digital Artist • Developer • Technologist
+      • saia da rimini • 
     </div>
 
     <h1>
-      Liquid glass aesthetics<br>
-      for a modern, vibrant<br>
-      personal presence
+      saiaj.in<br>
+
+      
     </h1>
 
     <p>
-      Crafting interactive experiences with a sleek glass interface,
-      subtle depth, and delightful motion.
+      dummy xx
     </p>
 
     <div class="buttons">
