--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </h1>
 
     <p>
-      dummy xx
+      Work with me: rowi@saiaj.in
     </p>
 
     <div class="buttons">
@@ -172,19 +172,19 @@
     <div class="stats">
       <div class="card">
         <h2>5+</h2>
-        <span>Years Experience</span>
+        <span>years in yearning</span>
       </div>
       <div class="card">
-        <h2>30+</h2>
-        <span>Projects Delivered</span>
+        <h2>100+</h2>
+        <span>i miss you a day</span>
       </div>
       <div class="card">
-        <h2>Interactive UI</h2>
-        <span>Specialty</span>
+        <h2>best in yearning</h2>
+        <span>awardee</span>
       </div>
       <div class="card">
-        <h2>Remote</h2>
-        <span>Location</span>
+        <h2>selos gods</h2>
+        <span>hahaha</span>
       </div>
     </div>
   </main>
